Show comments on post (load + new comments)

--- a/detail-post/index.html
+++ b/detail-post/index.html
@@ -47,6 +47,7 @@
                     <button>Submit</button>
                 </form>
             </div>
+            <ul id="comment-list"></ul>
         </main>
     </body>
 </html>
