--- a/create-post/index.html
+++ b/create-post/index.html
@@ -26,7 +26,7 @@
         <link rel="stylesheet" href="/styles/create-post.css" />
     </head>
     <body>
-        <header>
+        <header class="page-header">
             <h1 class="title">Create a post</h1>
             <nav>
                 <a href="/">Home</a>
