post images fitting within list

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <main>
             <section></section>
             <section id="center-section">
-                <div id="search-div">
+                <div id="create-div">
                     <a href="./create-post/"
                         ><input type="text" placeholder="Create a post..."
                     /></a>
